# IronmanStPoeltenPlan

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  STATUS.md  pyproject.toml
docs/adr/: 0001-rolling-plan-with-macro-skeleton.md  0002-loading-rhythm-and-phase-rebalance.md  0003-swim-as-primary-limiter.md  0004-indoor-trainer-for-winter-bike.md
plans/: macro.md  strength.md
plans/weeks/: 2026-W25.md  2026-W26.md  2026-W27.md  2026-W28.md  2026-W29.md  2026-W30.md  2026-W31.md  2026-W32.md  2026-W33.md
schedule/: irregular-events.md  weekly-template.md
scripts/: sync_calendar.py
